v2/README.md

# Тестовое для компании Сима-ленд

### Изменения:
 - Изменена база данных: теперь 2 таблицы не имеют связи между собой. 
При создании нового пользователя он автоматически попадает в колонку readonly.
 - Вместо aiohttp используется fastapi
 - Убрано логирование: теперь всю информацию выдает функция create_async_engine(echo=True))
 - Добавлена возможность редактирования пользователя
 - Код разделен на 3 модуля: data_base(создание базы данных и заполнение ее по умолчанию), backend(основной код CRUD), app(модуль для запуска)
 - Информация выводится в формате json

### Стек технологий использованный в проекте:
- Python 3.9
- SQLAlchemy
- asyncio
- FastApi
- PostgreSQL

### Как работать с API CRUD:
Работать с API CRUD можно через консоль или по средствам других приложений(postman, paw и д.р.)
- для просмотра, удаления, создания и редактирования пользователей перейдите по адресу http://localhost:9090/users

### Как запустить:
 - запустите модуль data_base.py
 - запустите модуль app.py

### Для работы с базой данных создайте файл .env со своими значениями или используйте данные по умолчанию:
  ```
  - NAME=test_db
  - USER=postgres
  - PASSWORD=postgres
  - HOST=localhost
  - PORT=5432
  ```


