v3/README.md

# Тестовое для компании Сима-ленд

### Изменения (по сравнению с версией 1):
 - Изменена база данных: теперь 2 таблицы не имеют связи между собой. 
 - При создании нового пользователя он автоматически попадает в колонку readonly.
 - Вместо aiohttp используется fastapi
 - Убрано логирование: теперь всю информацию выдает функция create_async_engine(echo=True))
 - Добавлена возможность регистрации и авторизации. 
 - Добавлена возможность редактирования пользователя (логин редактировать нельзя).
 - Теперь удалять и редактировать может только авторизованный пользователь(только если Вы являетесь владельцем).
 - Теперь при создании нового пользователя его пароль хэшируется для увелечения безопасности. 
 - Информация заполняется и выводится в формате json.
 - Код разделен на 5 модулей: data_base(создание базы данных и заполнение ее по умолчанию), backend(основной код CRUD),
app(модуль для запуска), hasher(модуль хэширует пароль при регистрации пользователя), schemas(модели pydantic).
 - Доступна документация swagger по адресу http://localhost:9090/docs.

### Стек технологий использованный в проекте:
- Python 3.9
- SQLAlchemy
- asyncio
- FastApi
- PostgreSQL
- JWT
- Pydantic

### Как работать с API CRUD:
Работать с API CRUD можно через консоль или по средствам других приложений(postman, paw и д.р.)

- Для регистрации пользователя, перейдите по адресу http://localhost:9090/registration.
И отправьте данные в body в формате json. Например:
```bash
{
    "first_name": "Иван",
    "last_name": "Иванов",
    "login": "Ivan",
    "password": "password123",
    "date_of_birth": "01-01-1990"
}
```

 - Для просмотра всех пользователей перейдите по адресу http://localhost:9090/users.
 - Для авторизации необходимо получить токен Bearer. Для этого перейдите по адресу http://localhost:9090/token
и отправьте Ваш username и password в form-data.
 - Для редактирования пользователя (если вы являетесь им) и используя полученный токен 
перейдите по адресу http://localhost:9090/update/<id>.
 - Для удаления пользователя (если вы являетесь им) и используя полученный токен 
перейдите по адресу http://localhost:9090/delete/<id>.

### Для работы с базой данных создайте файл .env со своими значениями или используйте данные по умолчанию:
  ```bash
  - NAME=test_db
  - USER=postgres
  - PASSWORD=postgres
  - HOST=localhost
  - PORT=5432
  ```

### Сборка и запуск:
```bash
git clone git@github.com:32Aleksey32/Test_Sima-land.git
cd v3
pip install virtualenv
python -m venv venv
source venv/bin/activate
pip install -r requirements.txt
python data_base.py
python app.py
```

